# simple-demo

./: .gitignore  Makefile  README.md  cleanup-demo.sh  docker-compose.yaml  install-demo-dependencies.sh  install-from-package.sh  uninstall-demo.sh  validate-package-contents.sh
ai-processor/: Dockerfile  go.mod  go.sum  main.go
coupon/: .dockerignore  .gitignore  Dockerfile  Makefile  app.js  docker-bake.hcl  nfpm.yaml  package-lock.json  package.json  tracing.js
currency/: .dockerignore  .gitignore  Dockerfile  Makefile  composer.json  dice.php  docker-bake.hcl  index.php  nfpm.yaml
demo/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-bake.hcl  nfpm.yaml
frontend/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-bake.hcl  nfpm.yaml  pom.xml
geolocation/: .dockerignore  .gitignore  Dockerfile  Gemfile  Makefile  docker-bake.hcl  nfpm.yaml
inventory/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-bake.hcl  nfpm.yaml  pom.xml  pyproject.toml
inventory/deployment/: deployment.yaml  service.yaml
inventory/distribution/: copy-assets.sh  postinstall.sh  preremove.sh  systemd.service
inventory/inventory/: main.py
inventory/src/main/java/dev/keyval/kvshop/inventory/: InventoryApplication.java  InventoryController.java  InventoryItem.java
kubernetes/: coupon-deployment.yaml  coupon-service.yaml  demo-all.yaml  deployment.yaml  frontend-deployment.yaml  instrument-all.yaml  inventory-deployment.yaml  jaeger-dest.yaml  jaeger.yaml  kustomization.yaml  membership-deployment.yaml  pricing-deployment.yaml  pricing-service.yaml  (+4 more)
(+150 files in other folders)
