[tool.poetry]
name = "inventory"
version = "0.1.0"
description = ""
authors = ["Eden Federman <eden@keyval.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "<3"
werkzeug = "<3"
opentelemetry-sdk = ">=1.27"
opentelemetry-exporter-otlp-proto-grpc = ">=1.27"
opentelemetry-instrumentation-flask = ">=0.48b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
